SFDC Automation/src/objects/Competitor_Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to relate non-Ryder vehicle information to Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Vehicles</relationshipLabel>
        <relationshipName>Competitor_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>City Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flatbed Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcel Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reefer Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Axle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tandem Axle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tandem Axle Sleeper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdealLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NationalLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PacLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interstate National</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Enter any known term-out dates for non-Ryder vehicles.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Competitor Vehicles</relationshipLabel>
        <relationshipName>Competitor_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Count__c</fullName>
        <label>Vehicle Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Competitor Vehicle</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Competitor Vehicle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Vehicles</pluralLabel>
    <recordTypes>
        <fullName>Account_Competitor_Vehicle</fullName>
        <active>true</active>
        <description>Select this when creating information connected to an Account.</description>
        <label>Account Competitor Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitive_Info_Rental_Accounts</fullName>
        <active>true</active>
        <label>Competitive Info Rental Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Competitor_Vehicle</fullName>
        <active>true</active>
        <description>Select if information is related to a Lead</description>
        <label>Lead Competitor Vehicle</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>